[package]
name = "bkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bkeeper"
path = "src/bin/main.rs"

[lib]
name = "bkeeper"
path = "src/lib.rs"

[dependencies]
env_logger="0.8.4"
log = "0.4.14"
anyhow = "1.0"
thiserror = "1.0"

csv = "1.1"
serde = { version = "1", features = ["derive"] }
rust_decimal = "1"
